[tool.poetry]
name = "A-Maze-Ing"
version = "1.3.7"
description = "A-Maze-Ing: a maze generation project and more !"
authors = ["iamessag <your@email.com>", "aymel-ha <szyn9x@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
# curses is part of the Python standard library on Linux/Mac

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
