[tool.poetry]
name = "mazeengine"
version = "0.1.0"
description = "A maze generator stand-alone module that will generate a maze based on config"
authors = ["aymel-ha", "iamessag"]
license = "MIT"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10.12"
numpy = ">=1.26.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"