[tool.poetry]
name = "mazeengine"
version = "0.1.3"
description = "A maze generator stand-alone module that will generate a maze based on config"
authors = ["aymel-ha", "iamessag"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mazeengine" }
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.26.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"